<?xml version="1.0"?>
<package format="2">
  <name>eprosima_rpc</name>
  <version>1.0.1</version>
  <description>
    eProsima's implementation of RTPS.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>LGPLv3</license>

  <url>https://github.com/eProsima/RPC</url>

  <build_depend>fast_rtps</build_depend>
  <build_export_depend>fast_rtps</build_export_depend>
  <exec_depend>fast_rtps</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
